fix: 修正 Middleware 未套用問題
調整項目:
    1. 修正 RequestLogger Middleware 未套用問題。
    2. 修正 RequestLogger Middleware 邏輯問題。
    3. 新增 Json Mapper 用資料夾 Resources。
